--- a/templates/sensitive-data-exposure.html
+++ b/templates/sensitive-data-exposure.html
@@ -4,8 +4,26 @@
   <div class="container">
     <h1>Sensitive Data Exposure</h1>
 
-    <p>blablabla blablabla</p>
+    <div>
+      <p>Explications...</p>
+    </div>
 
+    <div>
+      <form action="?" method="POST" onsubmit="register();return false;">
+        Firstname: <input type="text" id="firstname" value=""/>
+        Lastname: <input type="text" id="lastname" value=""/>
+        Password: <input type="password" id="password" value=""/>
+        <input class="button" type="submit" value="Register" />
+      </form>
+    </div>
+
+    <div>
+      <form action="?" method="POST" onsubmit="login();return false;">
+        Firstname: <input type="text" id="firstname" value=""/>
+        Password: <input type="password" id="password" value=""/>
+        <input class="button" type="submit" value="Login" />
+      </form>
+    </div>
   </div>
 </body>
 {% endblock %}
